--- a/giraffe/giraffe.html
+++ b/giraffe/giraffe.html
@@ -18,11 +18,11 @@
             <span style="cursor:pointer" id="close-button" onclick="closeNav()">×</span>
             <nav>
                 <ul id="overlay-content">
-                    <li class="nav-a"><a href="../final-home/final-home.html">Home</a></li>
-                    <li class="nav-a"><a href="../final-lion/final-lion.html">Lion</a></li>
-                    <li class="nav-a"><a href="../final-elephant/final-elephant.html">Elephant</a></li>
-                    <li class="nav-a"><a href="../final-giraffe/final-giraffe.html">Giraffe</a></li>
-                    <li class="nav-a"><a href="../final-credits/final-credits.html">Credits</a></li>
+                    <li class="nav-a"><a href="../home/home.html">Home</a></li>
+                    <li class="nav-a"><a href="../lion/lion.html">Lion</a></li>
+                    <li class="nav-a"><a href="../elephant/elephant.html">Elephant</a></li>
+                    <li class="nav-a"><a href="giraffe.html">Giraffe</a></li>
+                    <li class="nav-a"><a href="credits/credits.html">Credits</a></li>
                 </ul>
             </nav>
         </div>
@@ -158,9 +158,9 @@
 
     </div>
     <footer>
-        <p>All rights reserved. <a href="../final-credits/final-credits.html"><b>Credits</b></a> ©. </p>
+        <p>All rights reserved. <a href="../credits/credits.html"><b>Credits</b></a> ©. </p>
     </footer>
-    <script src="final-giraffe.js"></script>
+    <script src="giraffe.js"></script>
 
 </div>
 
