--- a/giraffe/giraffe.html
+++ b/giraffe/giraffe.html
@@ -2,7 +2,7 @@
 <html lang="en" class="sr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="final-giraffe.css">
+    <link rel="stylesheet" type="text/css" href="giraffe.css">
     <script src="../scrollreveal.js"></script>
     <title>Giraffe | Safari Sights</title>
     <meta name="description" content="Learn more about giraffes on Safari Sights!">
