--- a/elephant/elephant.html
+++ b/elephant/elephant.html
@@ -119,9 +119,9 @@
                            </div>
                        </div>
                        <div id="info-right">
-                           <a href="../final-credits/final-credits.html#elephant-2"><img src="../src/elephant2.jpg" alt="One African Elephant"></a>
-                           <a href="../final-credits/final-credits.html#elephant-3"><img src="../src/elephant3.jpg" alt="African Elephant mom with her calf"></a>
-                           <a href="../final-credits/final-credits.html#elephant-4"><img src="../src/elephant4.jpg" alt="African Elephant herd"></a>
+                           <a href="../credits/credits.html#elephant-2"><img src="src/elephant2.jpg" alt="One African Elephant"></a>
+                           <a href="../credits/credits.html#elephant-3"><img src="src/elephant3.jpg" alt="African Elephant mom with her calf"></a>
+                           <a href="../credits/credits.html#elephant-4"><img src="src/elephant4.jpg" alt="African Elephant herd"></a>
                        </div>
                    </div>
 
