--- a/credits/credits.html
+++ b/credits/credits.html
@@ -76,8 +76,7 @@
                            under the
                            <a href="https://creativecommons.org/licenses/by-nc/2.0/"> Creative Commons License</a>.
                        </p>
-                   <h5>Content</h5>
-                       <p> Content rephrased by <a href="https://chat.openai.com/">OpenAI.</a> (2024). ChatGPT (Mar 17 version) [Large language model].</p>
+
                <h4> Lion Page</h4>
                    <h5>Images</h5>
                        <p>
@@ -112,8 +111,6 @@
                            under the
                            <a href="https://creativecommons.org/licenses/by-nc/2.0/"> Creative Commons License</a>.
                        </p>
-
-
                    <h5>Content</h5>
                        <p> Content information supplied by
                            <a href="https://www.nationalgeographic.com/animals/mammals/facts/african-lion"> National Geographic</a>
@@ -123,19 +120,130 @@
 
 
                <h4> Elephant Page</h4>
-                   <p> Credit 1</p>
-                   <p> Credit 2</p>
-                   <p> Credit 3</p>
-                   <p> Credit 4</p>
+<h5>Images</h5>
+<p id="elephant-1">
+   The image of
+   <a href="https://www.flickr.com/photos/nransom/26545775941/in/photolist-23o1yYA-iggDgF-jg8idy-GrL3m6-5J3mkJ-3iE4gt-67EHsa-ajZqdh-avB29H-woXyb-q8VgiJ-7MijsP-aHNe4B-4X9stc-9sgkYy-E8K6Nk-x9n1NK-nZRFsS-9sdupa-3wqJ3h-9wwQrx-9zjKBe-aHam2P-5ttfVG-4RG3Wy-87jH5j-9wzNJQ-9eJj7L-qqtRT2-8V478E-dbbBsC-damsMe-yzXC2k-7a9u14-9tzeeV-mjepF-x9fh47-pbcfa5-5ttdFu-DBx3X-a2G6sS-9regXe-6Bbsr4-f5iygM-LxG1zS-yAGjvP-6KViFx-damu9s-54pcU6-4KVotH">
+       Two African Elephants
+   </a>
+   is credited to
+   <a href="https://www.flickr.com/photos/nransom/">Neil Ransom</a>
+   under the following
+   <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons License</a>.
+</p>
 
 
-               <h4> Giraffe Page</h4>
-                   <p> Credit 1</p>
-                   <p> Credit 2</p>
-                   <p> Credit 3</p>
-                   <p> Credit 4</p>
 
 
+<p id="elephant-2">
+   The image of
+   <a href="https://www.flickr.com/photos/48975388@N07/5035828469/in/photolist-dF5pDB-8EZWmM-LTu8J-dFaQBN-damsMe-8N681r-4Jmo5W-damu9s-mjepF-7QjznT-9reh5z-TwoLRH-apLjfj-68vMQD-9rheMd-6hwaZq-TwoKzV-8EZX4D-ocyQFt-9rheHC-Su3EkP-58U9RY-THRDMM-99WfkM-Su3KgF-ocCuwq-94p8fP-Su3HFX-94scSE-58p9WB-3HzLXz-k76ofN-TtVqiW-imzi9d-6oqdNC-Twn8XK-hRRfks-4baq3b-Q5kVp-TwoUhK-94hXn6-bDsXwZ-9rheEq-4aXPm3-2PGDZz-94mkjW-2PGBgi-94oZoa-58tmQu-94m477">
+       African Elephant
+   </a>
+   is credited to
+   <a href="https://www.flickr.com/photos/48975388@N07/">Richard Towell</a>
+   under the following
+   <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">Creative Commons License</a>.
+</p>
+
+
+
+
+<p id="elephant-3">
+   The image of
+   <a href="https://www.flickr.com/photos/sgtrock/9746594/in/photolist-RXjJ-4V21a6-baCsSz-btSsEv-28jDMf2-8bwR4X-khHG9H-C5Bn6A-5Gakj9-KQZkRm-9cYoMB-9d2uDQ-385RTk-9d2vBj-5heRyS-dsk3hj-h8wsi-cwPckA-kfqt3B-cwPdf1-cwPprm-67rkFm-4UxSdL-crVvLj-iggqjR-crW6MW-kmz5P5-rMhR48-zroJAi-dZPvu7-VtAc3U-7JJBWr-MX9Zeq-acczzv-ubcVZ6-8RAkzg-7zrriR-ke9gwQ-Nk4Kyb-cwPe71-v2UmWZ-ncsBTH-crW47m-crW7ms-crW4Gf-98wuLs-gfzxDs-cwNejS-cwNV9Q-cwNaEj">
+       African Elephant mom and her baby
+   </a>
+   is credited to
+   <a href="https://www.flickr.com/photos/sgtrock/">Joe Barbosa</a>
+   under the following
+   <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">Creative Commons License</a>.
+</p>
+
+
+
+
+<p id="elephant-4">
+   The image of
+   <a href="https://www.flickr.com/photos/activesteve/5596365337/in/photolist-9wwQrx-5933tq-aHam2P-9zkeFT-8V3PGb-boXZK-GVicnU-9wzNJQ-6KViFx-9eJj7L-8V478E-dbbBsC-damu9s-pspiwP-5ttdFu-DBx3X-9regXe-6Bbsr4-x9ft1j-XLRq-9tzenF-9rheMd-9tzfnt-6P1wiU-9regZZ-54pb6K-DseMB-m2oT8B-55Pnpo-a9rGgZ-65Tz8e-iS9tB-4qz8o9-3hqS18-4KVotH-6YnUEN-52FsVw-gHjsW-2rLut8-5kZPdN-6JkL6x-9buNw3-54pcgR-76Yie-cQAq6-TkE2ib-9oBHRw-kQkULB-5EQwBo-F84RE">
+       African Elephant herd
+   </a>
+   is credited to
+   <a href="https://www.flickr.com/photos/activesteve/">ActiveSteve</a>
+   under the following
+   <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">Creative Commons License</a>.
+</p>
+<h5>Content</h5>
+<p>
+   Content information provided by
+   <a href="https://www.nationalgeographic.com/animals/mammals/facts/african-elephant">National Geographic</a>,
+   <a href="https://www.worldwildlife.org/species/african-elephant">World Wild Life</a>, and
+   <a href="https://herd.org.za/blog/elephants-their-families-the-importance-of-social-structures-within-a-herd/#:~:text=The%20basic%20family%20unit%20in,the%20case%20for%20elephant%20bulls.">Herd</a>.
+</p>
+<p>
+   Content rephrased by <a href="https://chat.openai.com/">OpenAI.</a> (2024). ChatGPT (Mar 17 version) [Large language model].
+</p>
+<br>
+<br>
+
+
+
+
+
+
+
+<h4> Giraffe Page</h4>
+   <h5>Images</h5>
+       <p>
+           <a href="https://www.flickr.com/photos/133562572@N06/27755191250/in/photolist-JhCBob-RJsFA5-9kq1s2-4PqEKQ-iHP2bz-nwzm5y-8MU7fu-7GZ11Q-57VfQm-7sSZtb-reEpNC-q82pVx-g4e6n5-9LXrHE-cAJyZ3-6V2Rdd-pSGj9o-abeXBX-2fjmNrL-pVjPNg-6A4Hnz-8M6nMq-qWpmZ1-qB3zEH-sboswV-5ecEXJ-hxYgPK-dmvHEY-8s2RzK-WN4q4C-27JdWY-9r9BrC-8kWGKP-8MR2YM-dt9pwN-24Mr9kH-8uvrsz-5J7Nwy-5QpchL-8gWqhV-255KyiW-ZVWwaJ-GXBfmd-fhZgQG-5QpiPh-6BUH34-6gf2m5-4fZAFd-9fcqat-9FDqcz"> Photograph of Single Giraffe</a>
+           is provided by
+           <a href="https://www.flickr.com/photos/133562572@N06/"> jgburgess10</a>
+           under the
+           <a href="https://creativecommons.org/licenses/by-nc/2.0/"> Creative Commons License</a>.
+       </p>
+
+
+       <p>
+           <a href="https://www.flickr.com/photos/150835345@N08/39963333095/in/photolist-CeKkRk-usM62w-Fw7AAe-Mkzra7-MpXC59-bEWgGa-4S2QjZ-28hhkUq-soxc97-EvyArt-23TqwCp-5KCHM3-24cXKPS-KzvF1c-VkpdGG-unB6E3-2ch5h36-Pm8RH1-2e8pGWt-Y3BnYJ-65x1Rs-EPN5Pf-8qkwxz-k3jFHS-2ftCFct"> Photograph of Giraffe Herd</a>
+           is provided by
+           <a href="https://www.flickr.com/photos/150835345@N08/"> Wilhelm van Rooyen</a>
+           under the
+           <a href="https://creativecommons.org/licenses/by-nc/2.0/"> Creative Commons License</a>.
+       </p>
+
+
+       <p>
+           <a href="https://www.flickr.com/photos/150835345@N08/37156370263/in/photolist-YBo7nv-71MA71-2dHdPBf-bWbEpx-4sHsik-DWmUo6-aaVz3h-ozvyS3-2dxxaPd-fpQw6Z-MXH1bL-6rehHL-iToCuJ-8v4JUu-pGjnW3-oF1B8g-4KZCDh-2dC2fFX-ahQRtg-6LG5ys-g65Jsm-cmYUDN-4tJ5uL-dgsxrd-8yQsay-91kyUz-4Uuj1j-988zVW-4U6S19-axY3KU-a2EFCK-9FzqAp-KLwjNa-5qqPdY-eeCnmV-iHQjDD-8s2Syi-qcQHYN-8MU7fu-7GZ11Q-rztmB-ariFN2-ojCsio-nqsR5v-57VfQm-9xwHHV-KLwL7g-KTwbV-JhCBob-JovtKM"> Photograph of Giraffe with Bird</a>
+           is provided by
+           <a href="https://www.flickr.com/photos/150835345@N08/"> Wilhelm van Rooyen</a>
+           under the
+           <a href="https://creativecommons.org/licenses/by-nc/2.0/"> Creative Commons License</a>.
+       </p>
+
+
+       <p>
+           <a href="https://www.flickr.com/photos/141566780@N08/42710541445/in/photolist-285bFXB-dcaBED-YBo7nv-71MA71-2dHdPBf-bWbEpx-4sHsik-DWmUo6-aaVz3h-ozvyS3-2dxxaPd-fpQw6Z-KowCwh-g6mGpJ-MXH1bL-Nabbj-iToCuJ-8v4JUu-oF1B8g-5DGEt-9M5Yht-g65Jsm-5qqPdY-dgsxrd-91kyUz-d3wngS-988zVW-axY3KU-a2EFCK-iHP2bz-qcQHYN-8MU7fu-rztmB-ariFN2-6hauN-ojCsio-nqsR5v-7qSyyq-4gi2Ga-KLwL7g-8Gp9B4-JhCBob-JovtKM-82NvYZ-czRjtw-apTMwC-4ZBSCM-9kq1s2-reEpNC-6Wkwbw"> Photograph of Giraffe Looking Over Trees</a>
+           is provided by
+           <a href="https://www.flickr.com/photos/141566780@N08/"> Samuel Lemercier</a>
+           under the
+           <a href="https://creativecommons.org/licenses/by-nc/2.0/"> Creative Commons License</a>.
+       </p>
+
+
+
+
+   <h5>Content</h5>
+       <p> Content information supplied by
+           <a href="https://www.britannica.com/animal/giraffe"> Brittanica,</a>
+           <a href="https://www.animalwised.com/what-do-giraffes-eat-4881.html"> Animalwised,</a></p>
+           <a href="https://animalcorner.org/animals/giraffe/"> Animal Corner,</a>
+           <a href="https://www.nczoo.org/blog/giraffe-social-systems-friends-high-places"> North Carolina Zoo,</a>
+           and
+           <a href="https://nationalzoo.si.edu/conservation-ecology-center/giraffe-conservation"> Smithsonian's National Zoo & Conservation Biology Institute</a>.</p>
+
+
+       <p> Content rephrased by <a href="https://chat.openai.com/">OpenAI.</a> (2024). ChatGPT (Mar 17 version) [Large language model].</p>
+              
                <h4> Credit Page</h4>
                    <h5>Images</h5>
                        <p>
